# Rust

./: .gitignore  README.md
JEapp/: 11.17.17Device 3.xlsx  4014iso  AGENTS.md  Cargo.toml  probe.txt  temp-plot.html
JEapp/Paz, Juan Esteban Trabajo/: Forces.m  Paz, Juan Esteban Trabajo TMA 2013.docx  Simpos.m  Untitled.m  acel.m  circir.m  distMinima.m  lincir.m  linlin.m  pos.m  sim.m  veloc.m
JEapp/Paz, Juan Esteban Trabajo/Capturas/: POS.eps  acel1.eps  acel2.eps  acel3.eps  acel4.eps  sim1.eps  sim2.eps  sim3.eps  sim4.eps  vel1.eps  vel2.eps  vel3.eps  vel4.eps
JEapp/ltspice/: Cargo.toml
JEapp/src/: app.rs  blesys.rs  cnc.rs  datalogger.rs  gui.rs  lib.rs  ltspicesim.rs  main.rs  pltly.rs  ppk2srvc.rs  rbbsim.rs  sersys.rs  services.rs  sim.rs  sys.rs  sys_tools.rs  ui.rs
JEapp/src/appmod/: btcomm.rs  coms.rs  data.rs  mod.rs  objects.rs
JEapp/src/ltspice/: mod.rs  results.rs
apptabs/: Cargo.toml
apptabs/src/: main.rs  objects.rs
e123App/: Cargo.toml
e123App/src/: datalogger.rs  dump.rs  lib.rs  main.rs  sersys.rs
e123App/src/appmod/: data.rs  mod.rs  objects.rs
gdrive/: Cargo.toml  credentials.json
gdrive/src/: main.rs
kiss3d/: Cargo.toml
kiss3d/src/: main.rs  objects.rs
serialtst/: Cargo.toml
serialtst/src/: main.rs  sersys.rs
stm32f746GDisco/: Cargo.toml  Embed.toml
stm32f746GDisco/src/: main.rs  screen.rs
structs/: Cargo.toml  config.json  cutsconfig copy.json  cutsconfig.json
structs/src/: main.rs
tst/: Cargo.toml
tst/src/: lib.rs  main.rs
