[package]
name = "jeapp"
version = "0.1.0"
authors = ["JE <juanes.pazj@mail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["uuid/serde", "serde_cr", "serde_bytes"]


[dependencies]
#ui Dependencies
egui = "0.34.2"
egui_extras = {version="0.34.2",features = ["svg","image"]} #egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25.10", features = ["jpeg", "png"] } # Add the types you want support for
egui_plot = "0.35.0"
# egui_tabs = "0.2.1"
egui-notify = "0.22.0"
eframe = { version = "0.34.2", features = ["persistence", "glow"] }
num = "0.4.3"


serde = { version = "1.0.228", features = ["derive"] } # You only need this if you want app persistence
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_derive = "1.0.228"
rfd = "0.17.2"
strp = "1.1.2"
device_query = "4.0.1"
serialport = "4.9.0"

#random data generator
genrs = "0.1.1"
hex = "0.4.3"


#logging to console and file
ftail = "0.3"
log = "0.4.29"
term-painter = "0.4.0"


#csv handling
csv = "1.4.0"

# iterator tools
strum = "0.28.0"
strum_macros = "0.28.0"

#embed files to binary
rust-embed="8.11.0"

#macroquad = { version = "0.3.16", default-features = false }
calamine = "0.34.0"
ndarray = "0.17.2"
color-eyre = "0.6.5"
btleplug = { version = "0.12", features = ["serde"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
uuid = "1.23.1"
serde_cr = { package = "serde", version = "1.0.228", features = ["derive"], default-features = false, optional = true }
serde_bytes = { version = "0.11.19", optional = true }
futures = "0.3.32"
chrono = "0.4"
sysinfo = "0.39.0"
byteorder = "1.5.0"
gnuplot = "0.0.46"
xlsxwriter = "0.6.1"
statistical = "1.0.0"
cargo-edit = "0.13.10"
sync_wrapper = "1.0.2"
reqwest = {version ="0.13.3", features = [ "json"]}
tokio = { version = "1.52",  features = ["macros", "rt", "rt-multi-thread", "sync","full"] }

clipboard-win = "5.4.1"

# nordic ppk2 interface
ppk2 = "0.1.3"

tracing = "0.1.44"
clap = { version ="4.6.1", features = ["derive", "env"] }
anyhow = { version ="1.0.102", features = ["backtrace"] }
ctrlc = "3.5.2"
itertools = "0.14.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Devices_Bluetooth", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Bluetooth_Advertisement", "Devices_Radios", "Foundation_Collections", "Foundation", "Storage_Streams"] }

[dev-dependencies]
rand = "0.10.1"
serde_json = "1.0.149"
