[package]
name = "apptabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
device_query = "0.1.0"
egui = "0.20"
egui_dock = "0.3"
eframe = "0.20"
serde = { version = "1.0.144", features = ["derive"] } # You only need this if you want app persistence
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0.117"