[package]
name = "apptabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
device_query = "1.1.3"
egui = "0.21"
egui_dock = "0.3"
eframe = "0.21.3"
serde = { version = "1.0.162", features = ["derive"] } # You only need this if you want app persistence
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0.162"
