[package]
name = "jeapp"
version = "0.1.0"
authors = ["JE <juanes.pazj@mail.com>"]
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["uuid/serde", "serde_cr", "serde_bytes"]


[dependencies]
egui = "0.22.0"

eframe = { version = "0.22.0", features = ["persistence"] }
serde = { version = "1.0.185", features = ["derive"] } # You only need this if you want app persistence
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0.162"
strp = "1.1.2"
rfd = "0.11"
num = "0.4.0"
serialport = "4.2.0"
device_query = "1.1.3"
calamine = "0.19.1"
ndarray = "0.15.6"
color-eyre = "0.6.2"
async-trait = "0.1.68"
log = "0.4.17"
uuid = "1.3.2"
serde_cr = { package = "serde", version = "1.0.162", features = ["derive"], default-features = false, optional = true }
serde_bytes = { version = "0.11.9", optional = true }
futures = "0.3.28"
tokio = { version = "1.28", features = ["macros", "rt", "rt-multi-thread", "sync"] }
chrono = "0.4"
sysinfo = "0.29.0"
byteorder = "1.4.3"
gnuplot = "0.0.38"
xlsxwriter = "0.6.0"
statistical = "1.0.0"

image = { version = "0.24", default-features = false, features = ["png"] }


[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.96"
