[package]
name = "serialtst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
serde = { version = "1.0.185", features = ["derive"] } # You only need this if you want app persistence
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0.162"
strp = "1.1.2"