[package]
name = "hello_rtt"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
# embedded-hal = "0.2"
stm32f7 = "0.14.0"
stm32f7xx-hal = { version = "0.7.0", features = ["rt", "stm32f746",] }
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.2"
embedded-graphics = "0.6.1"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
ft5336 = "0.1.0"
nb = "1.0"
synopsys-usb-otg = { version = "0.2.3", features = ["cortex-m"], optional = true }
stm32-uart-hal = {path = "../stm32-uart-hal"}