[package]
name = "bevy_egui"
version = "0.19.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
description = "A plugin for Egui integration into Bevy"
license = "MIT"
edition = "2021"
repository = "https://github.com/mvlabat/bevy_egui"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
egui = { version = "0.21.0", default-features = false, features = ["bytemuck"] }
egui-winit = { version = "0.21.1", default-features = false }
egui_glium = "0.20.1"
ahash = { version = "0.8.3", default-features = false, features = [
    "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
    "std",
] }
bytemuck = "1.13.1"
glium = "0.32"
image = "0.24.6"
